# reclass-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/examples/: gen_playground.rs
crates/app/src/: app_state.rs  gui.rs  lib.rs  main.rs  mcp.rs  tui.rs
crates/app/src/gui/: flash.rs  mod.rs  panels.rs  settings.rs  table.rs  widgets.rs
crates/app/tests/: live_app.rs  mcp_smoke.rs
crates/backend-vmem/: Cargo.toml
crates/backend-vmem/src/: lib.rs  tracker.rs
crates/backend-vmem/tests/: live_read.rs  tracker.rs
crates/core/: Cargo.toml
crates/core/benches/: engine.rs
crates/core/src/: backend.rs  class.rs  codegen.rs  engine.rs  expr.rs  lib.rs  node.rs  project.rs
crates/core/tests/: codegen_rust.rs
docs/: vmem-api.md
examples/playground/: Makefile  README.md  playground.c  playground.ron
