[package]
name = "reclass"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "reclass-rs: a ReClass-style live memory inspector"

[features]
default = ["gui", "tui"]
gui = ["dep:eframe", "dep:egui"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
reclass-core = { workspace = true }
reclass-backend-vmem = { workspace = true }
anyhow = { workspace = true }
eframe = { version = "0.35.0", optional = true }
egui = { version = "0.35.0", optional = true }
ratatui = { version = "0.30.2", optional = true }
crossterm = { version = "0.29.0", optional = true }

[[bin]]
name = "reclass"
path = "src/main.rs"
